--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ transformers==4.35.0
 speechbrain==0.5.16
 librosa==0.10.0
 soundfile
-huggingface_hub>=0.25.2
+huggingface_hub
 pydub==0.25.0
 streamlit==1.28.0
 scikit-learn==1.3.0
